fix: fixed spacing of sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ ul > li {
 .header-container {
     background-color: inherit; 
     width: 100%;
-    padding-top: 25em;
+    padding-top: 22em;
     padding-bottom: 17em;
 }
 
